Adde OpenAPI annotations, updated User entity, implemented UserService and UserController, and add exception handling